--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@supabase/supabase-js": "^2.38.4",
+    "chart.js": "^4.4.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18"
