--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.3.0",
     "@heroicons/react": "^2.0.18",
     "@supabase/supabase-js": "^2.38.4",
+    "auth0": "^4.1.0",
     "chart.js": "^4.4.0",
     "next": "13.5.6",
     "react": "^18",
