--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@supabase/supabase-js": "^2.38.4",
     "auth0": "^4.1.0",
     "chart.js": "^4.4.0",
+    "ghcal": "^2.3.12",
+    "git-stats": "^3.2.0",
+    "github-calendar": "^2.3.2",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-github-calendar": "^4.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10",
