--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ghcal": "^2.3.12",
     "git-stats": "^3.2.0",
     "github-calendar": "^2.3.2",
+    "google-map-react": "^2.2.1",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
